# wgpu-notes

./: book.toml
code/: Cargo.toml
code/examples/desktop/adapter/: main.rs
code/examples/desktop/state/: main.rs  state.rs
code/examples/desktop/surface/: events.rs  graphics.rs  main.rs  state.rs
code/examples/desktop/surface/state/: adapter.rs  initialize.rs
code/examples/desktop/window/: main.rs
code/examples/web/window/: Cargo-bg.toml  Cargo.toml  index.html
code/examples/web/window/src/: lib.rs
src/: SUMMARY.md  chapter_1.md
src/introduction/: introduction.md
