[package]
name = "code"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
cfg-if = "1"
winit = "0.27"
tokio = "1.0"
env_logger = "0.9"
log = "0.4"
pollster = "0.2"
wgpu = "0.14"

[[example]]
name = "desktop-window"
path = "examples/desktop/window/main.rs"

[[example]]
name = "desktop-adapter"
path = "examples/desktop/adapter/main.rs"

[[example]]
name = "desktop-state"
path = "examples/desktop/state/main.rs"

[[example]]
name = "desktop-surface"
path = "examples/desktop/surface/main.rs"

[[example]]
name = "web-window"
path = "examples/web/window/"

[workspaces]
modules = [
    "./examples"
]