[package]
name = "wasm-window"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[build]
target = "wasm32-unknown-unknown"

[dependencies]
anyhow = "1.0.68"
cfg-if = "1"
winit = {version="0.27", features=["web"]}
tokio = "1.0"
log = "0.4"
pollster = "0.2"
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.14.2", features = ["webgl"]}
wasm-bindgen = "0.2.76"
wasm-bindgen-futures = "0.4.30"
wasm-bindgen-test = "0.3.33"
web-sys = { version = "0.3.53", features = [
    "Document",
    "Window",
    "Element",
]}
